--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "cucumber": "^0.10.1",
-    "nightwatch": "^0.8.18"
+    "open": "0.0.5"
   }
 }
