--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "testnode",
+  "name": "spygui",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node copyFile.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "gherkin": "^4.0.0",
     "open": "0.0.5"
   }
 }
